--- a/style.css
+++ b/style.css
@@ -99,7 +99,6 @@ a {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* margin-block-start: 13rem; */
     margin-inline-start: 9rem;
 }
 
@@ -114,7 +113,6 @@ a {
 }
 
 .introduction-text>p {
-    /* width: 50%; */
     font-weight: 500;
     font-size: 1.5rem;
 }
@@ -205,7 +203,6 @@ a {
 
 .about-me {
     height: 100vh;
-    /* margin-inline-start: 9rem; */
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -225,27 +222,31 @@ a {
 .about-wrapper>summary>br {
     margin-bottom: 1rem;
 }
+.link-decorated{
+    text-decoration: underline;
+    color: var(--primary-color);
+}
 
 .btn-container {
     margin-block-start: 3rem;
 }
 
 .btn-download {
-    background-color: DodgerBlue;
+    background-color: var(--primary-color);
     border: none;
-    color: white;
+    color: var(--main-bg-color-dark);
     padding: 12px 30px;
     cursor: pointer;
     font-size: 20px;
+    border-radius: 10px;
 }
 
 .btn-download:hover {
-    background-color: RoyalBlue;
+    background-color: var(--secondary-color);
 }
 
 .area {
-    background: #4e54c8;
-    background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);
+    background: linear-gradient(to right, var(--main-bg-color-light), var(--secondary-color));
     width: 100%;
     height: 100vh;
     position: absolute;
@@ -267,7 +268,7 @@ a {
     list-style: none;
     width: 20px;
     height: 20px;
-    background: rgba(221, 24, 24, 0.2);
+    background: var(--secondary-color);
     animation: animate 25s linear infinite;
     bottom: -150px;
 }
