--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 /* Resitting  */
 
+html,
 body {
     margin: 0;
     padding: 0;
@@ -222,7 +223,8 @@ a {
 .about-wrapper>summary>br {
     margin-bottom: 1rem;
 }
-.link-decorated{
+
+.link-decorated {
     text-decoration: underline;
     color: var(--primary-color);
 }
@@ -238,7 +240,7 @@ a {
     padding: 12px 30px;
     cursor: pointer;
     font-size: 20px;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 
 .btn-download:hover {
@@ -366,6 +368,216 @@ a {
     }
 
 }
+
+/* projects */
+
+.projects {
+    display: flex;
+    flex-direction: column;
+    margin-inline: 9rem;
+    padding-block: 2rem;
+    gap: 2rem;
+    align-items: flex-start;
+}
+
+.align-flex-end {
+    align-self: flex-end;
+}
+
+.container {
+    box-shadow: 0 15px 30px 1px grey;
+    background: rgba(255, 255, 255, 0.90);
+    text-align: center;
+    border-radius: 5px;
+    overflow: hidden;
+    height: 350px;
+    width: 700px;
+}
+
+.project-details {
+    position: relative;
+    text-align: left;
+    overflow: hidden;
+    padding: 30px;
+    height: 100%;
+    float: left;
+    width: 40%;
+
+}
+
+.container .project-details h1 {
+    font-family: 'Bebas Neue', cursive;
+    display: inline-block;
+    position: relative;
+    font-size: 30px;
+    color: var(--royal-purple);
+    margin: 0;
+
+}
+
+.container .project-details h1:before {
+    position: absolute;
+    content: '';
+    right: 0%;
+    top: 0%;
+    transform: translate(25px, -15px);
+    display: inline-block;
+    background: var(--secondary-color);
+    border-radius: 5px;
+    font-size: 14px;
+    padding: 5px;
+    color: white;
+    margin: 0;
+    animation: chan-sh 6s ease infinite;
+
+}
+
+
+
+.role {
+    display: inline-block;
+    margin-left: 0.5em;
+    color: var(--primary-color);
+    width: 70%;
+}
+
+
+.container .project-details>p {
+    font-family: 'EB Garamond', serif;
+    text-align: center;
+    font-size: 18px;
+    color: #7d7d7d;
+
+}
+
+.control {
+    position: absolute;
+    bottom: 20%;
+    left: 22.8%;
+
+}
+
+.btn {
+
+    transform: translateY(0px);
+    transition: 0.3s linear;
+    background-color: var(--primary-color);
+    border-radius: 5px;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+    outline: none;
+    border: none;
+    color: var(--main-bg-color-light);
+    padding: 0;
+    margin: 0;
+
+}
+
+.btn:hover {
+    transform: translateY(-6px);
+    background-color: var(--primary-color);
+}
+
+.btn span {
+    font-family: 'Farsan', cursive;
+    transition: transform 0.3s;
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 1.2em;
+    margin: 0;
+
+}
+
+.btn .code,
+.github-icon {
+    background: #333;
+    border: 0;
+    margin: 0;
+}
+
+.btn .code {
+    transform: translateX(-10%);
+    padding-right: 15px;
+}
+
+.btn .github-icon {
+    transform: translateX(-100%);
+    position: absolute;
+    background: #333;
+    z-index: 1;
+    left: 0;
+    top: 0;
+}
+
+.btn .github-repo-link {
+    z-index: 3;
+    font-weight: bolder;
+}
+
+.btn:hover .code {
+    transform: translateX(-110%);
+}
+
+.btn:hover .github-icon {
+    transform: translateX(0%);
+}
+
+
+
+.project-image {
+    transition: all 0.3s ease-out;
+    display: inline-block;
+    position: relative;
+    overflow: hidden;
+    height: 100%;
+    float: right;
+    width: 45%;
+}
+
+.container img {
+    width: 100%;
+    height: 100%;
+}
+
+.info {
+    background: rgba(27, 26, 26, 0.9);
+    font-family: 'Bree Serif', serif;
+    transition: all 0.3s ease-out;
+    transform: translateX(-100%);
+    position: absolute;
+    line-height: 1.8;
+    text-align: left;
+    font-size: 105%;
+    cursor: no-drop;
+    color: #FFF;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    top: 0;
+}
+
+.info h2 {
+    text-align: center
+}
+
+.project-image:hover .info {
+    transform: translateX(0);
+}
+
+.info ul li {
+    transition: 0.3s ease;
+}
+
+.info ul li:hover {
+    transform: translateX(50px) scale(1.3);
+}
+
+.project-image:hover img {
+    transition: all 0.3s ease-out;
+    transform: scale(1.2, 1.2);
+}
+
 
 /* Responsive */
 
