--- a/variables.css
+++ b/variables.css
@@ -7,6 +7,11 @@
     --high-emphasis-text: rgba(255, 255, 255, 0.87);
     --medium-emphasis: rgba(255, 255, 255, 0.6);
     --disabled-text: rgba(255, 255, 255, 0.38);
+    --section-title-font-size-xs: 1rem;
+    --section-title-font-size-sm: 1rem;
+    --section-title-font-size-md: 1rem;
+    --section-title-font-size-lg: 1rem;
+    --section-title-font-size-xl: 1rem;
 }
 
 /* h stand for heading  */
