--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ a {
     top: 0;
     left: 0;
     right: 0;
-    /* z-index: 8; */
+    z-index: 1;
     background-color: transparent;
     box-sizing: border-box;
     color: var(--royal-purple);
